feat: add producing custom message and some fixes